@@ -1,3 +1,11 @@
+2002-02-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* exp_main_sub.c (Expect_Init): Applied Don Porter's patch which
+	  excludes the initialization of Tcl/Expect packages and the
+	  creation of the ExitHandler from the 'firsttime' guard. This
+	  allows the full use of Expect in slave-iterpreters. This is the
+	  bug SF #459646.
+
 2002-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* expect.man: Changed abbreviation of "-notransfer" from "-n" to
